Log用のモジュール追加。fmt.Println を applog.Logger.Print に差し替え

--- a/Pages/html/top.html
+++ b/Pages/html/top.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="/kiyopon" method=get>
+<form action="/SignIn" method=get>
 <table border="0">
   <tr>
     <td align="right"><b> ユーザ名：</b></td>
