--- a/Pages/html/top.html
+++ b/Pages/html/top.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <title>Sample App</title>
 </head>
-<body>
 
-<form action="/SignIn" method=get>
+<body style="margin:0">
+
+<div id="app"></div>
+<script src="/static/bundle.js"></script>
+
+<!--
+<div style="margin-top: 100px;">
+<form action="/kiyopon" method=get>
 <table border="0">
   <tr>
     <td align="right"><b> ユーザ名：</b></td>
@@ -24,6 +30,8 @@
 </form>
 
 <a href = "SignUp">登録画面（仮）</a>
+</div>
+-->
 
 </body>
 </html>
