--- a/Pages/html/top.html
+++ b/Pages/html/top.html
@@ -7,8 +7,9 @@
 
 <body style="margin:0">
 
-<div id="app"></div>
-<script src="/static/bundle.js"></script>
+<div id="r_signin"></div>
+<script src="/static/signin.bundle.js"></script>
+<a href="/SignUpView">まだ登録してないで！</a>
 
 <!--
 <div style="margin-top: 100px;">
