--- a/Pages/html/top.html
+++ b/Pages/html/top.html
@@ -1,38 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title>Sample App</title>
-</head>
-
-<body style="margin:0">
-
-<div id="r_signin"></div>
-<script src="/static/signin.bundle.js"></script>
-<a href="/SignUpView">まだ登録してないで！</a>
-
-<!--
-<div style="margin-top: 100px;">
-<form action="/kiyopon" method=get>
-<table border="0">
-  <tr>
-    <td align="right"><b> ユーザ名：</b></td>
-    <td><input type="text" name="name" size="30" maxlength="20"></td>
-  </tr>
-  <tr>
-    <td align="right"><b> パスワード：</b></td>
-    <td><input type="password" name="pass" size="6" maxlength="8"></td>
-  </tr>
-    <td>
-      <input type="submit" value="送信">
-    </td>
-  </tr>
-</table>
-</form>
-
-<a href = "SignUp">登録画面（仮）</a>
-</div>
--->
-
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Sample App</title>
+    </head>
+    <body style="margin:0">
+        <div id="r_top"></div>
+        <script src="/static/top.bundle.js"></script>
+    </body>
 </html>
